avances de diseño

--- a/frontend/HTML/index.html
+++ b/frontend/HTML/index.html
@@ -18,8 +18,8 @@
     <div class="menu">
         <a href="index.html">Inicio</a>
         <a href="servicios.html">Servicios</a>
-        <a href="#">Nosotros</a>
-        <a href="#">Citas</a>
+        <a href="nosotros.html">Nosotros</a>
+        <a href="cita.html">Citas</a>
     </div>
 </nav>
     <!--/navegador-->
