filter by the name and the the status in the table client al ready

--- a/frontend/HTML/cita.html
+++ b/frontend/HTML/cita.html
@@ -22,7 +22,7 @@
     <!--navegador-->
   <nav class="navegacion">
     <div class="logo">
-        <img src="" alt="Logo">
+        <img src="/frontend/img/petvetLogo.png" alt="Logo">
     </div>
 
     <div class="menu">
