--- a/frontend/HTML/servicios.html
+++ b/frontend/HTML/servicios.html
@@ -23,7 +23,7 @@
 <!--navegador-->
 <nav class="navegacion">
     <div class="logo">
-        <img src="" alt="Logo">
+        <img src="/frontend/img/petvetLogo.png" alt="Logo">
     </div>
 
     <div class="menu">
@@ -45,12 +45,11 @@
         <div class="col-4">
             <div class="lista-statica">
                 <ul>
-                    <li>Hospitalización</li>
-                    <li>Urgencias 24 Horas</li>
-                    <li>Cirugía Veterinaria</li>
-                    <li>Medicina Preventiva</li>
-                    <li>Consulta Veterinaria</li>
-                    <li>Laboratorio Clínico</li>
+                    <li><i class="fa-solid fa-dog" style="font-size: 30px;"></i> Hospitalización</li>
+                    <li><i class="fa-solid fa-clock" style="font-size: 30px;"></i> Urgencias 24 Horas</li>
+                    <li><i class="fa-solid fa-user-nurse"style="font-size: 30px;"></i> Cirugía Veterinaria</li>
+                    <li><i class="fa-solid fa-clipboard-list" style="font-size: 30px;"></i>Consulta Veterinaria</li>
+                    <li><i class="fa-solid fa-capsules" style="font-size: 30px;"></i> Laboratorio Clínico</li>
                 </ul>
             </div>
         </div>
@@ -140,9 +139,8 @@
                     <div class="fondo-datos">
                         <img src="/frontend/img/g-2.png" alt="Imagen de datos" class="fondo">
                         <div class="texto-superpuesto">
-                            <div class="col">Mascotas atendidas<br><strong>+3,000</strong></div>
-                            <div class="col">Años de Experiencia<br><strong>+8</strong></div>
-                            <div class="col">Cirugías realizadas<br><strong>+1,200</strong></div>
+                            <div class="col"><h2>Mascotas atendidas</h2><br><strong data-target="1000">0</strong></div>
+                            <div class="col"><h2>Años de Experiencia</h2><br><strong data-target="12">0</strong></div>
                         </div>
                     </div>
                 </div>
