peticiones en la web en proceso

--- a/frontend/HTML/index.html
+++ b/frontend/HTML/index.html
@@ -179,8 +179,8 @@
         
                     <div class="horas">
                         <h3>ATENCIÓN 24 HORAS</h3>
-                        <p><i class="fas fa-phone"></i> <strong>Línea de atención:</strong> (+57) 311 291 9194</p>
-                        <p><i class="fab fa-whatsapp"></i> (+57) 311 291 9194</p>
+                        <p><i class="fas fa-phone"></i> <strong>Línea de atención:</strong> (+57) 322 667 5852</p>
+                        <p><i class="fab fa-whatsapp"></i> (+57) 322 667 5852</p>
                         <p><i class="far fa-envelope"></i> servicioalcliente@puntovet.com.co</p>
                     </div>
         
@@ -205,13 +205,12 @@
                             <li>Contáctanos</li>
                             <li>Preguntas frecuentes sobre cuidado animal</li>
                             <li>Blog/Noticias</li>
-                            <li>Términos y Condiciones</li>
                         </ul>
                     </div>        
                 </div>
                 <div class="footer-custom">
-                    <p><strong>Punto Vet 2022 © Medellín, Colombia</strong></p>
-                    <p>Diseño y desarrollo por Gulupa Digital © 2022</p>
+                    <p><strong>Punto Vet 2025 © Huila, Colombia</strong></p>
+                    <p>Diseño y desarrollo por Gulupa Digital © 2025</p>
                     <p class="derechos-reservados">
                         Todos los derechos reservados | <a href="#">Términos y condiciones</a>
                     </p>
