--- a/frontend/HTML/cita.html
+++ b/frontend/HTML/cita.html
@@ -218,7 +218,7 @@
                         <input type="text" id="nombre" name="nombre" placeholder="Nombre" required >
                     </div>
     
-                    <div class="campo">
+                    <div class="campo" >
                         <label for="telefono">Teléfono*</label>
                         <div class="telefono">
                             <input type="number" id="telefono" name="telefono" placeholder="1234567890" required>
@@ -272,7 +272,7 @@
                         </select>
                     </div>
                     
-                    <div class="especie">
+                    <div class="especie" style="margin-bottom: -120px;">
                         <label for="nombre">Fecha de cita</label>
                         <input type="date" id="fecha" name="fechaCita" placeholder="Fecha" required style=" border-radius: 15px;
                         padding: 10px;
