proceso de crud de speciality

--- a/frontend/HTML/nosotros.html
+++ b/frontend/HTML/nosotros.html
@@ -36,6 +36,7 @@
         <a href="servicios.html">Servicios</a>
         <a href="nosotros.html">Nosotros</a>
         <a href="cita.html">Citas</a>
+        <a href="administrador.html">Administrador</a>
     </div>
 </nav>
 <!--/navegador-->
