--- a/frontend/HTML/servicios.html
+++ b/frontend/HTML/servicios.html
@@ -18,8 +18,7 @@
         </path>
       </svg>
       
-  <!-- Navegador -->
-<!--navegador-->
+ <!--navegador-->
 <nav class="navegacion">
     <div class="logo">
         <img src="/frontend/img/petvetLogo.png" alt="Logo">
@@ -36,9 +35,10 @@
         <a href="servicios.html">Servicios</a>
         <a href="nosotros.html">Nosotros</a>
         <a href="cita.html">Citas</a>
+        <a href="administrador.html">Administrador</a>
     </div>
 </nav>
-<!--/navegador-->   
+<!--/navegador-->
 
 
    <!-- Servicios Section -->
