--- a/frontend/HTML/cita.html
+++ b/frontend/HTML/cita.html
@@ -35,6 +35,7 @@
         <a href="servicios.html">Servicios</a>
         <a href="nosotros.html">Nosotros</a>
         <a href="cita.html">Citas</a>
+        <a href="administrador.html">Administrador</a>
     </div>
 </nav>
 <!--/navegador-->
@@ -305,8 +306,8 @@
     
 
 <script src="/frontend/fontawesome/fontawesome-free-6.6.0-web/js/all.js"></script>
-<script src="/frontend/JS/cita.js"></script>
 <script src="/frontend/JS/index.js"></script>
 <script src="/frontend/bootstrap/bootstrap-5.3.2-dist/js/bootstrap.bundle.js"></script>
+<script src="/frontend/JS/cita.js"></script>
 </body>
 </html>
