--- a/frontend/HTML/citasAgendadas.html
+++ b/frontend/HTML/citasAgendadas.html
@@ -34,6 +34,7 @@
         <a href="servicios.html">Servicios</a>
         <a href="nosotros.html">Nosotros</a>
         <a href="cita.html">Citas</a>
+        <a href="administrador.html">Administrador</a>
     </div>
 </nav>
 <!--/navegador-->
