--- a/frontend/HTML/especialidad.html
+++ b/frontend/HTML/especialidad.html
@@ -106,6 +106,7 @@
     
 
 <script src="/frontend/JS/especialidad.js"></script>
+<script src="/frontend/JS/index.js"></script>
 <script src="/frontend/bootstrap/bootstrap-5.3.2-dist/js/bootstrap.bundle.js"></script>
     
 </body>
