ya filtra las especialidades

--- a/frontend/HTML/administrador.html
+++ b/frontend/HTML/administrador.html
@@ -108,7 +108,7 @@
                     </div>
                     <h3>Sede</h3>
                     <p>Gestiona las diferentes sedes de la clínica veterinaria, sus direcciones y horarios de atención.</p>
-                    <a href="sedes.html" class="btn-action"><i class="fa-solid fa-building"></i> Administrar Sedes</a>
+                    <a href="sede.html" class="btn-action"><i class="fa-solid fa-building"></i> Administrar Sedes</a>
                 </div>
             </div>
         </div>
