place ya todo funcional

--- a/frontend/HTML/sede.html
+++ b/frontend/HTML/sede.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Especialidades</title>
+    <title>Sede</title>
     <link rel="stylesheet" href="/frontend/CSS/style.CSS">
     <link rel="stylesheet" href="/frontend/CSS/especialidad.css">
     <link rel="stylesheet" href="/frontend/bootstrap/bootstrap-5.3.2-dist/css/bootstrap.css">
@@ -75,7 +75,7 @@
             </div>
             
             <div class="filtrar-veterinarios">
-                <input  id="nameFilter" type="text" placeholder="Buscar nomre de especialidad...">
+                <input  id="nameFilter" type="text" placeholder="Buscar nomre de la sede...">
                 <button type="button"><i class="fas fa-search"></i> Buscar</button>
             </div>
             
