desarrollo de la entidad veterinario en proceso

--- a/frontend/HTML/administrador.html
+++ b/frontend/HTML/administrador.html
@@ -96,7 +96,7 @@
                     </div>
                     <h3>Raza</h3>
                     <p>Configura y administra las diferentes razas de mascotas para un mejor control y registro en el sistema.</p>
-                    <a href="razas.html" class="btn-action"><i class="fa-solid fa-tags"></i> Administrar Razas</a>
+                    <a href="raza.html" class="btn-action"><i class="fa-solid fa-tags"></i> Administrar Razas</a>
                 </div>
             </div>
   
