cita en proceso

--- a/frontend/HTML/agendarCita.html
+++ b/frontend/HTML/agendarCita.html
@@ -65,7 +65,7 @@
             </div>
             <h3>Agendar Cita</h3>
             <p>Programa la fecha de atención de tu mascota para asegurar su cuidado con nuestros profesionales.</p>
-            <a href="" class="btn-action"><i class="fa-solid fa-plus"></i> Registrar mascota</a>
+            <a href="formularioCita.html" class="btn-action"><i class="fa-solid fa-plus"></i> Registrar mascota</a>
           </div>
         </div>
       </div>
