ya muestra las citas agendadas

--- a/frontend/HTML/citasAgendadas.html
+++ b/frontend/HTML/citasAgendadas.html
@@ -49,64 +49,14 @@
         <button><i class="fas fa-search"></i> Buscar</button>
     </div>
     <div class="agendamiento">
-        <!-- Cita 1 -->
-        <div class="cita-card">
-            <div class="cita-header">
-                <div class="cita-mascota">
-                    <div class="cita-mascota-icono">
-                        <i class="fas fa-dog"></i>
-                    </div>
-                    <div class="cita-mascota-info">
-                        <h4>Max</h4>
-                        <p>Dueño: Juan Pérez</p>
-                    </div>
-                </div>
-            </div>
-            <div class="cita-body">
-                <div class="cita-columna">
-                    <div class="cita-info">
-                        <strong>Raza:</strong>
-                        <span>Labrador Retriever</span>
-                    </div>
-                    <div class="cita-info">
-                        <strong>Veterinario:</strong>
-                        <span>Dra. Laura Martínez</span>
-                    </div>
-                    <div class="cita-info">
-                        <strong>Lugar:</strong>
-                        <span>Sede Principal</span>
-                    </div>
-                </div>
-                <div class="cita-columna">
-                    <div class="cita-info">
-                        <strong>Tratamiento:</strong>
-                        <span>Consulta de rutina</span>
-                    </div>
-                    <div class="cita-info">
-                        <strong>Teléfono:</strong>
-                        <span>310-555-1234</span>
-                    </div>
-                </div>
-                <div class="cita-fecha">
-                    <div class="fecha">15 de Noviembre, 2023</div>
-                </div>
-            </div>
-            <div class="cita-acciones">
-                <button class="btn-accion btn-editar" onclick="editarCita(1)">
-                    <i class="fas fa-edit"></i> Editar
-                </button>
-                <button class="btn-accion btn-eliminar" onclick="eliminarCita(1)">
-                    <i class="fas fa-trash-alt"></i> Eliminar
-                </button>
-            </div>
-        </div>
-   
+  
       
     </div>
    </div>
    
 
 <script src="/frontend/JS/modal.js"></script>
+<script src="/frontend/JS/formCita.js"></script>
 <script src="/frontend/JS/index.js"></script>
 </body>
 </html>
