--- a/frontend/HTML/citasAgendadas.html
+++ b/frontend/HTML/citasAgendadas.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="/frontend/CSS/agendas.css">
     <link rel="stylesheet" href="/frontend/bootstrap/bootstrap-5.3.2-dist/css/bootstrap.css">
     <link rel="stylesheet" href="/frontend/fontawesome/fontawesome-free-6.6.0-web/css/all.css">
+    
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+
 </head>
 <body>
      <!-- Curvatura -->
@@ -56,6 +59,7 @@
    
 
 <script src="/frontend/JS/modal.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 <script src="/frontend/JS/formCita.js"></script>
 <script src="/frontend/JS/index.js"></script>
 </body>
