ya funciona totalmente las citas agendadas

--- a/frontend/HTML/citasAgendadas.html
+++ b/frontend/HTML/citasAgendadas.html
@@ -48,8 +48,8 @@
     </div>
     <div class="filtrador">
         <h3>Busca la cita de tu mascota</h3>
-        <input type="text" placeholder="Ingresa el nombre de tu mascota">
-        <button><i class="fas fa-search"></i> Buscar</button>
+        <input type="text" id="buscarMascota" placeholder="Ingresa el nombre de tu mascota">
+        <button  id="btnBuscar" ><i class="fas fa-search"></i> Buscar</button>
     </div>
     <div class="agendamiento">
   
