--- a/frontend/HTML/nosotros.html
+++ b/frontend/HTML/nosotros.html
@@ -109,7 +109,7 @@
 
         <div class="informacion">
             <div class="logo-informacion">
-                <img src="logo.png" alt="Logo Clínica Veterinaria">
+                <img src="/frontend/img/petvetLogo.png" alt="Logo">
             </div>
 
             <div class="horas">
