diseño de alertas y validaciones ya hecho

--- a/frontend/HTML/sede.html
+++ b/frontend/HTML/sede.html
@@ -106,6 +106,7 @@
     
 
 <script src="/frontend/JS/sede.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script src="/frontend/JS/index.js"></script>
 <script src="/frontend/bootstrap/bootstrap-5.3.2-dist/js/bootstrap.bundle.js"></script>
     
