--- a/frontend/HTML/formularioCita.html
+++ b/frontend/HTML/formularioCita.html
@@ -123,6 +123,7 @@
 
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script src="/frontend/JS/formCita.js"></script>
 <script src="/frontend/JS/index.js"></script>
 <script src="/frontend/bootstrap/bootstrap-5.3.2-dist/js/bootstrap.bundle.js"></script>
