--- a/frontend/HTML/raza.html
+++ b/frontend/HTML/raza.html
@@ -104,6 +104,7 @@
         </div>
     </div>
     <script src="/frontend/JS/raza.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="/frontend/JS/index.js"></script>
     <script src="/frontend/bootstrap/bootstrap-5.3.2-dist/js/bootstrap.bundle.js"></script>
     
